[Retrace] Narrowing by non-mapped position should give empty result
Fixes: 201982044
Bug: 202055473
Change-Id: Ie1018b08cc8bc8de5dec501a4d598b583d331089